--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Basel Moqbel's Profile</title>
 
 </head>
-<body>
+<body style="background-color: #cce5ff;">
 <table cellspacing="20">
     <tr>
         <th><img src="basel.ping.jpg"
@@ -112,7 +112,7 @@
 <hr size="2">
 <br>
 <h1>Projects</h1>
-<table border="1">
+<table cellspacint="20">
     <tr>
         <th>Year</th>
         <th>Project</th>
