--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <hr size="2">
 <br>
 <h1>Projects</h1>
-<table cellspacint="30">
+<table cellspacing="30">
     <tr>
         <th>Year</th>
         <th>Project</th>
