--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Basel Moqbel's Profile</title>
-
+    <link rel="stylesheet" href="SCC/style.css">
 </head>
-<body style="background-color: #cce5ff;">
+<body >
 <table cellspacing="20">
     <tr>
         <th><img src="basel.ping.jpg"
@@ -14,11 +14,11 @@
      height="200"
      border-radius:50%;
     >
-    <style>
+   <!-- <style>
         img {
           border-radius: 10%;
         }
-        </style>
+        </style>  -->
         </th>
         <th> <h1>Basel Moqbel</h1>
  <h3><em>Full Stack Developer</em></h3> 
