--- a/Contact-me.html
+++ b/Contact-me.html
@@ -3,7 +3,7 @@
 <head>
     <title>Contact Me</title>
     <h3>Contact information</h3>
-    
+    <link rel="stylesheet" href="SCC/style.css">
 </head>
 <body>
 <p><strong>My Email Address: </strong> <em>basel1230moqbel@gmail.com</em> </p>
