--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Basel Moqbel's Profile</title>
-    <link rel="stylesheet" href="SCC/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body >
 <table cellspacing="20">
